k8s/01-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: employee-management
  labels:
    app.kubernetes.io/part-of: employee-management
